Embed the game link

--- a/Spooder/index.html
+++ b/Spooder/index.html
@@ -17,10 +17,10 @@
 
   <body>
 
-    <body>
+      <body>
   <h1>SPOODER SHOOTER</h1>
 
-  <a class="name" href="https://github.com/jasoncript5/jasoncript5.github.io"target="blank">By: Jason Su</a>
+  <a class="name" href="https://jasoncript5.github.io/Shoot/"target="blank">By: Jason Su</a>
 
   <div class="btn"><a class="playLink" href="#"target="blank">STERT SHUUTING</a></div>
 
