--- a/Spooder/index.html
+++ b/Spooder/index.html
@@ -20,9 +20,9 @@
       <body>
   <h1>SPOODER SHOOTER</h1>
 
-  <a class="name" href="https://jasoncript5.github.io/Shoot/"target="blank">By: Jason Su</a>
+  <a class="name" href="https://jasoncript5.github.io"target="blank">By: Jason Su</a>
 
-  <div class="btn"><a class="playLink" href="#"target="blank">STERT SHUUTING</a></div>
+  <div class="btn"><a class="playLink" href="https://jasoncript5.github.io/Shooter/"target="blank">STERT SHUUTING</a></div>
 
 </body>
     
