--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="http://img06.deviantart.net/1501/i/2014/298/f/a/energy_lightning_power_electric_electricity_logo_by_andrea_perry-d840ydr.png" alt="" /></a>
+								<a href="https://docs.google.com/document/d/1vg2vbS8j7Vw-TDSHohvVA93CWdTylxVQpEqeWUCj43E/edit" target="blank" class="logo"><img src="http://img06.deviantart.net/1501/i/2014/298/f/a/energy_lightning_power_electric_electricity_logo_by_andrea_perry-d840ydr.png" alt="" /></a>
 								<header>
 									<h2>Renewable Energies</h2>
 									<p> Energy Transfers, Advantages and Disadvantages </p>
